[gd_scene load_steps=6 format=2]

[ext_resource path="res://Ball/Ball.gd" type="Script" id=1]
[ext_resource path="res://Tileset/tileset.png" type="Texture" id=2]
[ext_resource path="res://Audio/sound1.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 35.1272

[sub_resource type="Animation" id=2]

resource_name = "wiggle"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -5.0, 5.0, 0.0 ]
}

[node name="Ball" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 0
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
speed_x = 300
speed_y = 500
bounce_factor = 2000
gravity = 300
friction = 1
mode = 0
wet_rate = 50.0
max_planting_speed = 500

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="1"]

rect = Rect2( -10, -10, 20, 20 )

[node name="BallArea" type="Area2D" parent="." index="2"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
priority = 5.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Audio Bus", "Collision" ]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BallArea" index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="3"]

rotation = -0.0152551
texture = ExtResource( 2 )
vframes = 4
hframes = 4
frame = 8
_sections_unfolded = [ "Animation", "Transform" ]

[node name="CropHolder" type="Node2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( -7.15536, -33.3786 )

[node name="Pos1" type="Position2D" parent="CropHolder" index="0"]

position = Vector2( -3.70993, 1.16912 )

[node name="Pos2" type="Position2D" parent="CropHolder" index="1"]

position = Vector2( 15.5477, -17.6558 )

[node name="Pos3" type="Position2D" parent="CropHolder" index="2"]

position = Vector2( 37.4199, -4.47984 )

[node name="BallAnimation" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = "wiggle"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/wiggle = SubResource( 2 )
blend_times = [  ]

[node name="BallSound" type="AudioStreamPlayer2D" parent="." index="6"]

stream = ExtResource( 3 )
volume_db = -10.0
autoplay = false
max_distance = 500.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]

[connection signal="area_entered" from="BallArea" to="." method="_on_BallArea_area_entered"]

[connection signal="area_exited" from="BallArea" to="." method="_on_BallArea_area_exited"]


